/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";

import "sonardyne/api/common/unique_id.proto";
import "sonardyne/api/modules/output_message_module/output_message_list.proto";
import "sonardyne/api/modules/output_message_module/supported_output_message.proto";

package sonardyne.api.modules.output_message_module;

// OutputMessageModuleConfiguration defines the configuration of an output message module.
// It includes a unique identifier, the types of messages the module supports, the supported
// output rates, and an optional list of configured output messages.
message OutputMessageModuleConfiguration {
  sonardyne.api.common.UniqueID uid                                   = 1;  // Unique ID of the output message module configuration.
  optional OutputMessageList output_message_list                      = 2;  // List of configured output messages.
  repeated SupportedOutputMessage readonly_supported_output_messages  = 3;  // Supported output message types (read-only).
  repeated double readonly_preset_rates_hz                            = 4;  // Supported output message rates (read-only).
  double readonly_max_combined_output_rate_hz                         = 5;  // Supported maximum combined output rate.
}
