/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";

import "sonardyne/api/common/timestamp.proto";
import "sonardyne/api/services/comms_service/comms_subscription.proto";

package sonardyne.api.services.comms_service;

// CommsSubscriptionRequest represents a request to subscribe to one or more communication messages.
// It includes a unique request identifier to correlate with the response, a timestamp of the request,
// and a list of communication subscriptions to initiate.
message CommsSubscriptionRequest {
  uint32 request_uid                                  = 1;  // Identifier to match the corresponding CommsSubscriptionResponse.
  sonardyne.api.common.Timestamp timestamp            = 2;  // Timestamp of the request.
  repeated CommsSubscription comms_subscriptions      = 3;  // List of communication subscriptions to request.
}
